<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/title_text_view"
        android:textColor="@color/tintcolor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/petition_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/petition_text_view"
            android:textColor="@color/textcolor" />

        <EditText
            android:id="@+id/edit_text_petition"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/petition"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_text_view"
            android:textColor="@color/textcolor" />

        <EditText
            android:id="@+id/edit_text_question"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/question"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_send"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_button"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_text_view" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/answer_text_view"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:textColor="@color/textcolor"
        android:textSize="18sp"

        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/title_sub_text_view"
        android:textColor="@color/tintcolor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <Button
        android:id="@+id/button_help"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/help_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/answer_text_view"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/answer_text_view"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/quote_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/quote_text_view"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toTopOf="@+id/button_help"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/quote_author_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/quote_author_text_view"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="@+id/quote_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quote_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>